1) detail 페이지 작성 // 2) create, update, delete 구현

--- a/movies/templates/movies/index.html
+++ b/movies/templates/movies/index.html
@@ -12,7 +12,7 @@
 						<h5 class="card-header">{{ movie.title }}</h5>
 						<div class="card-body">
 							{% comment %} 디테일 링크 {% endcomment %}
-							<a href="#">DETAIL</a>
+							<a href="{% url "movies:detail" movie.pk %}">DETAIL</a>
 							{% comment %} 좋아요 버튼 {% endcomment %}
 						</div>
 					</div>
