--- a/templates/base.html
+++ b/templates/base.html
@@ -11,18 +11,18 @@
 			<div class="container-fluid">
 					<a class="navbar-brand text-light" href="{% url "movies:index" %}">MOVIE</a>
 					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
+							<span class="navbar-toggler-icon"></span>
 					</button>
 					<div class="collapse navbar-collapse" id="navbarNav">
 							<ul class="navbar-nav">
+									<li class="nav-item">
+										<a class="nav-link text-light" aria-current="page" href="{% url "movies:create" %}">영화 등록</a>
+									</li>
 									<li class="nav-item">
 											<a class="nav-link text-light" href="#">Link 1</a>
 									</li>
 									<li class="nav-item">
 											<a class="nav-link text-light" href="#">Link 2</a>
-									</li>
-									<li class="nav-item">
-										<a class="nav-link text-light" href="#">Link 3</a>
 									</li>
 									<li class="nav-item">
 											<a class="nav-link text-light disabled" aria-disabled="true">Disabled</a>
