--- a/movies/templates/movies/detail.html
+++ b/movies/templates/movies/detail.html
@@ -1,29 +1,100 @@
 {% extends "base.html" %}
 
 {% block title %}
-		<h1>DETAIL PAGE</h1>
+	<h1>DETAIL PAGE</h1>
 {% endblock title %}
 
 {% block content %}
-	<div class="container mt-4 mb-4 ">
-		<div class="card">
-			<div class="card-body">
-				<h5>{{movie.title}}</h5>
-				<p>{{movie.description}}</p>
+		{% comment %} 영화 리뷰 정보 {% endcomment %}
+		<div class="row">
+			<div class="col-md-4 mb-5">
+				<div class="card border-light">
+					<div class="card-body text-center">
+						<h6 class="card-title">작성자</h6>
+						<p class="card-text">
+							<a href="{% url 'accounts:profile' movie.user %}" class="font-weight-bold">{{ movie.user }}</a>
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4 mb-5">
+				<div class="card border-light">
+					<div class="card-body text-center">
+						<h6 class="card-title">댓글 수</h6>
+						<p class="card-text">{{ movie.comment_set.count }}</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-4 mb-5">
+				<div class="card border-light">
+					<div class="card-body text-center">
+						<h6 class="card-title">좋아요 수</h6>
+						<p class="card-text">{{ movie.like_users.count }}</p>
+					</div>
+				</div>
 			</div>
 		</div>
-		<hr>
-        {% comment %} 업데이트 링크 {% endcomment %}
-        <a href="{% url 'movies:update' movie.pk %}">UPDATE</a>
 
-        {% comment %} 삭제 버튼 {% endcomment %}
-        <form action="{% url 'movies:delete' movie.pk %}" method="POST" style="display: inline;">
-            {% csrf_token %}
-            <button type="submit">DELETE</button>
-        </form>
-        <br>
-        {% comment %} 뒤로가기(메인페이지) {% endcomment %}
-        <a href="{% url 'movies:index' %}">BACK</a>
-    </div>
 
+	{% comment %} 리뷰 본문 {% endcomment %}
+	<div class="card mb-5">
+		<div class="card-body">
+			<h3>{{ movie.title }}</h3>
+			<br>
+			<p class="lead">{{ movie.description }}</p>
+		</div>
+	</div>
+
+	<hr>
+
+	{% comment %} 댓글 리스트 {% endcomment %}
+	<h4 class="my-4">댓글 목록</h4>
+	{% if comments %}
+		<ul class="list-group">
+			{% for comment in comments %}
+				<li class="list-group-item mb-3 d-flex justify-content-between align-items-center">
+					<div>
+						<a href="{% url 'accounts:profile' comment.user %}" class="font-weight-bold">{{ comment.user.username }}</a>
+						<small class="text-muted ml-2">{{ comment.updated_at|date:"Y-m-d H:i" }}</small>
+						<p class="mb-1 mt-2">{{ comment.content }}</p>
+					</div>
+					{% if comment.user == request.user %}
+						<a href="{% url 'movies:comments_delete' movie.pk comment.pk %}" class="btn btn-outline-danger btn-sm">삭제</a>
+					{% endif %}
+				</li>
+			{% endfor %}
+		</ul>
+	{% else %}
+		<p class="text-muted">댓글이 없습니다. <br> 댓글을 달아주세요.</p>
+	{% endif %}
+
+	<hr>
+
+	{% comment %} 댓글 입력란 {% endcomment %}
+	<h4 class="my-4">댓글 작성</h4>
+	<form action="{% url 'movies:comments_create' movie_pk=movie.pk %}" method="POST" class="mb-4">
+		{% csrf_token %}
+			{{ comment_form.content }}
+		<button type="submit" class="btn btn-primary btn-sm">제출</button>
+	</form>
+
+	<hr>
+
+	<div class="d-flex justify-content-between">
+		{% comment %} 뒤로가기 버튼 {% endcomment %}
+		<a href="{% url 'movies:index' %}" class="btn btn-outline-secondary btn-sm">홈</a>
+		
+		{% if request.user == movie.user %}
+		<div class="ml-auto">
+			{% comment %} 수정 버튼 {% endcomment %}
+			<a href="{% url 'movies:update' movie.pk %}" class="btn btn-warning btn-sm mr-2">수정</a>
+			{% comment %} 삭제 버튼 {% endcomment %}
+			<form action="{% url 'movies:delete' movie.pk %}" method="POST" style="display: inline;">
+				{% csrf_token %}
+				<button type="submit" class="btn btn-danger btn-sm">삭제</button>
+			</form>
+		</div>
+		{% endif %}
+			
+	</div>
 {% endblock content %}
