--- a/templates/base.html
+++ b/templates/base.html
@@ -3,35 +3,61 @@
 	<head>
 		<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css" rel="stylesheet">
+
+    {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> {% endcomment %}
   </head>
   <body>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body">
-			<div class="container-fluid">
-					<a class="navbar-brand text-light" href="{% url "movies:index" %}">MOVIE</a>
-					<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-							<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse" id="navbarNav">
-							<ul class="navbar-nav">
-									<li class="nav-item">
-										<a class="nav-link text-light" aria-current="page" href="{% url "movies:create" %}">영화 등록</a>
-									</li>
-									<li class="nav-item">
-											<a class="nav-link text-light" href="#">Link 1</a>
-									</li>
-									<li class="nav-item">
-											<a class="nav-link text-light" href="#">Link 2</a>
-									</li>
-									<li class="nav-item">
-											<a class="nav-link text-light disabled" aria-disabled="true">Disabled</a>
-									</li>
-							</ul>
-					</div>
-			</div>
-	</nav>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 	
+	{% if user.is_authenticated %}
+		<nav class="navbar navbar-expand-lg bg-dark border-bottom border-body">
+			<div class="container-fluid">
+				<a class="navbar-brand text-light" href="{% url 'movies:index' %}">MOVIE</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link text-light" href="{% url 'movies:create' %}" style="font-size: 16px;">영화 등록</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-light" href="{% url 'accounts:update' %}" style="font-size: 16px;">회원정보수정</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-light" href="{% url 'accounts:profile' user.username %}" style="font-size: 16px;">프로필</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-light" href="{% url 'accounts:logout' %}" style="font-size: 16px;">로그아웃</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	{% else %}
+		<nav class="navbar navbar-expand-lg bg-dark border-bottom border-body">
+			<div class="container-fluid">
+				<a class="navbar-brand text-light" href="{% url 'movies:index' %}">MOVIE</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav">
+						<li class="nav-item">
+							<a class="nav-link text-light" href="{% url 'accounts:signup' %}" style="font-size: 16px;">회원가입</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link text-light" href="{% url 'accounts:login' %}" style="font-size: 16px;">로그인</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	{% endif %}
+		
+
 	<div class="container mt-4">
 		{% block title %}
 		{% endblock title %}
@@ -42,5 +68,5 @@
 		{% endblock content %}
 	</div>
 
-</body>
+	</body>
 </html>
